<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:gravity="center"
    tools:context=".activity.SignupScreen">

    <EditText
        android:id="@+id/ed_first_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:background="@drawable/border_radius"
        android:hint="@string/edFname"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingLeft="@dimen/_10sdp"
        android:singleLine="true"
        android:textSize="@dimen/_13sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/border_radius"
        android:paddingLeft="@dimen/_2sdp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/contrycode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:ccp_defaultNameCode="CA" />

        <EditText
            android:id="@+id/ed_phno"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:background="@color/transparent"
            android:hint="@string/phno"
            android:paddingLeft="@dimen/_8sdp"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>




    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/border_radius"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:isScrollContainer="true"
        android:maxLines="1"
        android:paddingLeft="@dimen/_10sdp"
        android:singleLine="true"
        android:textSize="@dimen/_13sdp" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/border_radius"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:isScrollContainer="true"
        android:maxLines="1"
        android:paddingLeft="@dimen/_10sdp"
        android:singleLine="true"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/signup"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:background="@drawable/background_radius"/>

    <TextView
        android:id="@+id/txt_backtologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/back_to_login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp" />


</LinearLayout>